--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -13,11 +13,11 @@
 	text-align: left;
 }
 .anchor-button:hover {
-	background-color:#F7F7F7;
+	background-color:#ddd;
 	box-shadow: none;
 }
 .anchor-button:hover {
-	background-color:#F7F7F7;
+	background-color:#ddd;
 	box-shadow: none;
 }
 nav.navbar {
